# TIAGo-hamr-navigation

./: .gitignore  README.md
Local_planner/hamr_mpc_local_planner/: CMakeLists.txt  package.xml
Local_planner/hamr_mpc_local_planner/include/hamr_mpc_local_planner/: hamr_mpc_ros.h
Local_planner/hamr_mpc_local_planner/src/: hamr_mpc_ros.cpp
MPC_Differential_Drive/: PotentialField.py  casadiMPC.py  cubic_spline_planner.py  model_predictive_control.bat  model_predictive_control.sh  model_predictive_control2.py
MPC_Differential_Drive/devel/: .catkin  local_setup.sh  setup.sh
MPC_Differential_Drive/mpc_acado/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  setup.py  simple_mpc.cpp  test.py
MPC_Differential_Drive/src/: CasadiMPC3states.py  CasadiMPCOOP.py  CasadiMPC_CentroidAvoidance.py  CasadiMPC_PolygonAvoidance.py  CasadiMPCwithoutROS.py  GoalSubCmdPub.py  Goalpublisher.py  MO_publisher.py  MPCpot.py  Obstacle.msg  PotentialField.py  casadiMPC.py
Matlab_simulation/: Simulate_MPC_multiple_varying_obs.m  Simulate_MPC_one_varying_obs.m  casadi_mpc_MOSO_traj_track_with_acc.m  casadi_mpc_MO_traj_track.m  casadi_mpc_circle_trajectory.m  casadi_mpc_lifted.m  casadi_mpc_lifted_trajectory_tracking.m  casadi_mpc_line_trajtrack_with_obs.m  casadi_mpc_one_moving_obstacle.m  casadi_mpc_single.m  shift.m
Matlab_simulation/MPC/: casadi_mpc_MO_traj_track.m  casadi_mpc_circle_trajectory.m  casadi_mpc_lifted_trajectory_tracking.m  casadi_mpc_lifted_with_multiple_obstacles.m  casadi_mpc_lifted_with_static_obstacles.m  casadi_mpc_line_trajtrack_with_obs.m  casadi_mpc_multiple_varying_obstacles.m  casadi_mpc_one_moving_obstacle.m  casadi_mpc_path_following_no_obstacles.m  casadi_mpc_polygon_obs_SO_in_P.m  casadi_mpc_polynom_obstc_point_stabilization.m  casadi_mpc_with_polygon_centroid.m  test_closest_point_and_distance.m  test_closest_point_to_polygon.m  test_polygon_close_endge_pair.m  test_polygon_obstacles.m
Matlab_simulation/ReadRosbag/: PlotRobotPose.m  rosbag2matlab.m
Matlab_simulation/Simulation/: Simulate_MPC.m  Simulate_MPC_MO_traj_track.m  Simulate_MPC_SO_centroid_polygon.m  (+9 more)
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/: CMakeLists.txt  package.xml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/base/carrot/: local_planner.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/base/common/: global_costmap_plugins_public_sim.yaml  local_costmap_plugins_public_sim.yaml  local_costmap_public_sim.yaml  recovery_behaviors.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/base/eband/: local_planner.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/base/global_planner/: planpy.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/base/robotino/: local_planner.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/base/teb/: local_planner.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/base/trajectory/: local_planner.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/by/common/: global_costmap.yaml  local_costmap.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/by_unsafe/common/: global_costmap.yaml  local_costmap.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/localization/: amcl.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/config/state_machine/: state_machine_public_sim.yaml
Modified_Pal-Tiago_packages/pal_navigation_cfg_tiago/launch/: localization_amcl.launch  localization_fake.launch  mapping_gmapping.launch  move_base.launch  move_by.launch  move_by_unsafe.launch  rviz.launch  state_machine.launch
Modified_Pal-Tiago_packages/tiago_laser_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
Modified_Pal-Tiago_packages/tiago_laser_sensors/config/: hokuyo_filter.yaml  hokuyo_urg_04lx_ug01_laser.yaml  rgbd_cloud_laser.yaml  sick-561_filter.yaml  sick-571_filter.yaml  sick_tim561_laser.yaml  sick_tim571_laser.yaml
Modified_Pal-Tiago_packages/tiago_laser_sensors/launch/: base_laser.launch  hokuyo_laser.launch  laser.launch  rgbd_cloud_laser.launch  sick-551_laser.launch  sick-561_laser.launch  sick-571_laser.launch  velodyne_laser.launch
costmap_converter_publisher/: CMakeLists.txt  package.xml
costmap_converter_publisher/src/: costmap_converter_node.cpp
goalpub/src/pathsplit/: CMakeLists.txt
goalpub/src/pathsplit/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.zsh  setup.bash
goalpub/src/pathsplit/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
goalpub/src/pathsplit/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake
human_aware_navigation/: CMakeLists.txt  package.xml
human_aware_navigation/launch/: mapping.launch  mapping_gmapping.launch  move_base.launch  rviz.launch  tiago_amcl.launch
pal_navigation_cfg_pmb2/: CMakeLists.txt  package.xml
pal_navigation_cfg_pmb2/config/base/common/: global_costmap_plugins_public_sim.yaml  global_costmap_public_sim.yaml  local_costmap_plugins_public_sim.yaml  local_costmap_public_sim.yaml  recovery_behaviors.yaml
pal_navigation_cfg_pmb2/config/base/dwa/: local_planner.yaml
pal_navigation_cfg_pmb2/config/base/global_planner/: navfn.yaml  sbpl_lattice_planner.yaml
pal_navigation_cfg_pmb2/config/base/teb/: local_planner.yaml
pal_navigation_cfg_pmb2/config/localization/: fake.yaml
pal_navigation_cfg_pmb2/config/state_machine/: state_machine_public_sim.yaml
pal_navigation_cfg_pmb2/launch/: localization_amcl.launch  localization_fake.launch  mapping_gmapping.launch  mapping_octomap_save.launch  move_base.launch  robot_localization_odom.launch  rviz.launch  state_machine.launch
pathsplit/: CMakeLists.txt  CasadiMPC_PolygonAvoidance.py
plotstuff/: COPN1.mat  rosbag2matlab_2.m  rosbag2matlab_with_time.m
tiago_gazebo_simulation/: CMakeLists.txt  package.xml
tiago_gazebo_simulation/launch/: tiago_gazebo_start.launch
tiago_hamr_msgs/: CMakeLists.txt  package.xml
tiago_hamr_navigation/: CMakeLists.txt  package.xml
(+303 files in other folders)
