<?xml version="1.0"?>
<package format="2">
  <name>human_aware_navigation</name>
  <version>0.0.0</version>
  <description>The human_aware_navigation package</description>
  <maintainer email="reiserbalazs@gmail.com">rejzi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <build_depend>casadi</build_depend>
  <exec_depend>casadi</exec_depend>
</package>
