<?xml version="1.0"?>
<package format="2">
  <name>tiago_gazebo_simulation</name>
  <version>0.0.0</version>
  <description>The tiago_gazebo_simulation package</description>
  <maintainer email="rejzi@todo.todo">rejzi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>pal_gazebo_plugins</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <exec_depend>pal_hardware_gazebo</exec_depend>
  <exec_depend>tiago_bringup</exec_depend>
  <exec_depend>tiago_controller_configuration_gazebo</exec_depend>
  <exec_depend>pal_gripper_controller_configuration_gazebo</exec_depend>
  <exec_depend>pal_pcl_points_throttle_and_filter</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>play_motion_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
