<?xml version="1.0"?>
<package format="2">
  <name>hamr_mpc_local_planner</name>
  <version>0.0.0</version>
  <description>
    The teb_local_planner package implements a plugin
    to the base_local_planner of the 2D navigation stack.
  </description>
  <maintainer email="breise18@studen.aau.dk">Balazs Reiser</maintainer>
  <license>TODO</license>
  <author email="breise18@student.aau.dk">Balazs Reiser</author>

  <!-- similar dependencies as teb_local_planner -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>costmap_converter</depend>

  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>visualization_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
