<?xml version="1.0"?>
<package format="2">
  <name>pal_navigation_cfg_tiago</name>
  <version>1.0.0</version>
  <description>Robot specific config and launch files needed to run
    navigation on the tiago robot.</description>
  <maintainer email="procopio.stein@pal-robotics.com">Procopio Stein</maintainer>
  <license>Apache License 2.0</license>
  <author email="procopio.stein@pal-robotics.com">Procopio Stein</author>
  <author email="sai.kishor@pal-robotics.com">Sai Kishor Kothakota</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>fake_localization</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>pal_navigation_sm</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>rviz_plugin_covariance</exec_depend>
  <exec_depend>range_sensor_layer</exec_depend>

</package>
